# all-bin-arrays

./: Cargo.toml  README.md
src/: main.rs
